2006-02-05  KUBO Takehiro  <kubo@jiubao.org>
	add OCI8::Metadata module.
	* ext/oci8/error.c: add oci8_get_error_code().
	* ext/oci8/extconf.rb: delete param.o and add metadata.o.
	* ext/oci8/metadata.c: add a new file.
	* ext/oci8/oci8.h: add oci8_get_error_code(), Init_oci8_metadata(),
	    oci8_metadata_create() and ora_number_to_str().
	    delete  and oci8_param_create().
	* ext/oci8/oci8lib.c: call Init_oci8_metadata() instead of
	     Init_oci8_param().
	* ext/oci8/oranumber.c: export ora_number_to_str().
	* ext/oci8/param.c: deleted.
	* ext/oci8/stmt.c: call oci8_metadata_create instead of 
	     oci8_param_create().
	* lib/oci8.rb.in: require 'oci8/metadata.rb'
	* lib/oci8/metadata.rb: add a new file.

2006-02-08  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb: move almost code to lib/oci8/oci8.rb.
	* lib/oci8/oci8.rb: moved from lib/oci8.rb.

2006-02-04  KUBO Takehiro  <kubo@jiubao.org>
	merge OCIStmt to OCi8::Curosr.
	* ext/oci8/oci8.c: implement OCI8::autocommit? and OCI8::autocommit=
	    in C layer.
	* ext/oci8/oci8.h: fix oci8_svcctx_t structure to support
	    OCI8::autocommit in C layer. fix Init_oci8_stmt() prototype.
	* ext/oci8/oci8lib.c: fix Init_oci8_stmt().
	* ext/oci8/stmt.c: OCIStmt become OCI8::Cursor. Almost OCIStmt's
	    methods become private methods, which are called by ruby layer.
	* lib/oci8.rb.in: delete OCI8::autocommit?, OCI8::autocommit=,

2006-02-02  KUBO Takehiro  <kubo@jiubao.org>
	move non-blocking handling code from oci8.rb to oci8lib.so.
	* ext/oci8/error.c: add OCIBreak class.
	* ext/oci8/oci8.c: move oci8_svcctx_t to oci8.h.
	    change oci8_commit(), oci8_rollback(), oci8_non_blocking_p()
	    and oci8_set_non_blocking() to use oci_rc macro.
	    change oci8_break() for oci_rc macro.
	    delete oci8_reset(). OCIReset is called in oci_rc macro now.
	    change oci8_get_svcctx() scope to global.
	    implement OCI8#commit, OCI8#rollback, OCI8#non_blocking?,
	    OCI8#non_blocking=, OCI8#break in C layer.